--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,8 @@ spring.jpa.show-sql=true
 
 spring.jackson.serialization.fail-on-empty-beans=false
 
-configuracao.pedido.service.url=http://localhost:8080
+spring.application.name=pagamentos
+
+eureka.client.serviceUrl.defaultZone=${EUREKA_URI:http://localhost:8761/eureka/}
+
 
