--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8081
 
 #DATASOURCE CONFIGS
-spring.datasource.url=jdbc:mysql://localhost:3306/eats_pagamento?createDatabaseIfNotExist=true&useTimezone=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3307/eats_pagamento?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=root
 
