Preparando para mensageria (async)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,4 +15,8 @@ spring.application.name=pagamentos
 
 eureka.client.serviceUrl.defaultZone=${EUREKA_URI:http://localhost:8761/eureka/}
 
+spring.rabbitmq.username=root
+spring.rabbitmq.password=root
+
+
 
