--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,12 @@
 			<artifactId>spring-boot-starter-amqp</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
